fix overflow on logos + some styling

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,12 +37,28 @@ img{
     color: #fff;
 }
 
+.btn-blue:hover{
+    box-shadow: #1961FF 0px 0px 10px 0px;
+}
+
 .btn-black-border{
     border: 1px solid black;
 }
 
+.btn-black-border:hover{
+    border: none;
+    background-color: black;
+    color: #fff;
+}
+
 .btn-white{
     background-color: #fff;
+}
+
+.btn-white:hover{
+    border: none;
+    background-color: black;
+    color: #fff;
 }
 /* HEADER */
 
@@ -59,6 +75,11 @@ header{
 header .row > :nth-child(2n){
     margin-left: 30px;
     margin-right: 30px;
+}
+
+header p:hover{
+    cursor: pointer;
+    border-bottom: 1px solid black;
 }
 
 /* end HEADER */
@@ -252,6 +273,10 @@ h3{
 .stretch{
     align-items: stretch;
 }
+
+.pointer{
+    cursor: pointer;
+}
 /* end UTILITY */
 
 /* MAIN */
@@ -274,14 +299,19 @@ main{
 .logo-container{
     display: flex;
     flex-direction: column;
-    max-width: calc(100% / 6);
+    max-width: calc(100vw / 6);
+    max-height: calc(100vw / 6);
+    aspect-ratio: 1/1;
     flex-grow: 1;
 }
 
 .big-logo-container{
     display: flex;
     flex-direction: column;
-    max-width: calc(100% / 3);
+    max-width: calc(100vw / 3);
+    max-height: calc(100vw / 3);
+    overflow-y: auto;
+    aspect-ratio: 1/1;
     flex-grow: 1;
 }
 
@@ -349,6 +379,23 @@ main{
     color: #61082B;
 }
 
+.faq-checkbox {
+    display: none;
+}
+
+.faq-answer {
+    display: none;
+}
+
+.faq-checkbox:checked + .row .fa-chevron-down {
+    transform: rotate(180deg);
+}
+
+.faq-checkbox:checked + .row + .faq-answer {
+    display: block;
+}
+
+
 /* FOOTER */
 
 footer{
@@ -363,6 +410,11 @@ footer{
 footer .column.w-20 p {
     color: white;
     line-height: 2;
+}
+
+footer .column.w-20 p:hover {
+    cursor: pointer;
+    text-decoration: underline;
 }
 
 footer .column.w-20> :first-child {
